bug fixes and polish on mobile

--- a/platforms/html5/src/components/features/summaryScreen/summaryScreen.scss
+++ b/platforms/html5/src/components/features/summaryScreen/summaryScreen.scss
@@ -88,6 +88,7 @@ $smallScreenWidth: 468px;
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: 96px;
   margin: -0.75rem 0;
 
   .swag-summaryScreen__stat {
